revamp the password visibility button, styling issues fixed as well

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -7,6 +7,7 @@
 .password-container {
   display: flex;
   align-items: center;
+  position: relative;
 }
   
 
@@ -17,8 +18,9 @@
 
 .toggle-password {
   position: absolute;
-  right: 1090px;
+  right: 10px;
   top: 51%;
+  transform: translateY(-50%);
   background: none;
   border: none;
   cursor: pointer;
